# GraphLoom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_CONTEXT.md  README.md  RELEASE.md  SECURITY.md  SESSION_NOTES.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
.github/: CODEOWNERS  branch-protection-main.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ai_task.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gitleaks.yml  release.yml  test.yml
examples/: example.settings.toml  example_01.json  example_01.yaml  example_02.json  example_03.json  example_03.yaml  full-graph-nodes-ports-links.yaml  minimal-input.schema.json  single-link-autonodes-no-ports.yaml  single-link-autonodes-with-ports.yaml  single-node-no-type.yaml  subgraph-nodes-ports-links.yaml  subgraph.json  subgraph.yaml
json/: elk_settings.example.toml  output_test.json  sample_input_01.json  sample_output_01.json
src/elkpydantic/: README.md  __init__.py  base.py  builder.py  canvas.py  edge.py  elkjs.py  enums.py  node.py  options.py  port.py  settings.py
src/elkpydantic/schemas/: minimal-input.schema.json
src/graphloom/: README.md  __init__.py  base.py  builder.py  canvas.py  edge.py  edge_properties.py  elkjs.py  enums.py  node.py  options.py  port.py  profile.py  settings.py  theme.py
src/graphloom/schemas/: minimal-input.schema.json
tests/: test_builder.py  test_builder_additional.py  test_cli.py  test_elkjs.py  test_elkjs_additional.py  test_exports.py  test_profile_adapter.py  test_schema.py  test_theme.py
