[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elkpydantic"
version = "0.1.0"
description = "Enriches minimal JSON input to valid ELK JSON output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "tomli>=2; python_version < '3.11'",
    "PyYAML>=6"
]
authors = [
    { name = "Faerkeren" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Faerkeren/ElkPydantic"
Repository = "https://github.com/Faerkeren/ElkPydantic"
Issues = "https://github.com/Faerkeren/ElkPydantic/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
elkpydantic = "elkpydantic.builder:main"
