[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphLoom"
version = "0.1.0"
description = "Converts simplified YAML graph definitions into enriched laid-out ELK JSON"
keywords = [
    "elk",
    "graph",
    "pydantic",
    "network-topology",
    "diagram-layout",
    "json",
    "yaml"
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "tomli>=2; python_version < '3.11'",
    "PyYAML>=6"
]
authors = [
    { name = "Faerkeren" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/GraphRapids/GraphLoom"
Repository = "https://github.com/GraphRapids/GraphLoom"
Issues = "https://github.com/GraphRapids/GraphLoom/issues"
Changelog = "https://github.com/GraphRapids/GraphLoom/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
themes = [
    "GraphTheme>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
graphloom = [
    "schemas/*.json",
]

[project.scripts]
graphloom = "graphloom.builder:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
